mutants.out.old/log/src__proto__single__ent__progress.rs_line_52_col_9.log

*** src/proto/single/ent/progress.rs:52:9: replace ProgressUpdate::builder -> ProgressUpdateBuilder with Default::default()

*** mutation diff:
--- src/proto/single/ent/progress.rs
+++ replace ProgressUpdate::builder -> ProgressUpdateBuilder with Default::default()
@@ -44,17 +44,17 @@
         ProgressUpdate::builder(jid).percent(percent).build()
     }
 
     /// Create a new instance of `ProgressUpdateBuilder` with job ID already set.
     ///
     /// Equivalent to creating a [new](struct.ProgressUpdateBuilder.html#method.new)
     /// `ProgressUpdateBuilder`.
     pub fn builder(jid: JobId) -> ProgressUpdateBuilder {
-        ProgressUpdateBuilder::new(jid)
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl ProgressUpdateBuilder {
     /// Builds an instance of ProgressUpdate.
     pub fn build(&self) -> ProgressUpdate {
         self.try_build()
             .expect("Only jid is required, and it is set by all constructors.")


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `ProgressUpdateBuilder: Default` is not satisfied
  --> src/proto/single/ent/progress.rs:52:9
   |
52 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ProgressUpdateBuilder`
   |
help: consider annotating `ProgressUpdateBuilder` with `#[derive(Default)]`
   |
11 | #[derive(Debug, Clone, Serialize, #[derive(Default)]
   |                                   ++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
